fix font difference and remove extra padding fro mobile

--- a/src/routes/single-product/single-product.css
+++ b/src/routes/single-product/single-product.css
@@ -104,9 +104,3 @@
   font-weight: 700;
   font-size: 1.5rem;
 }
-
-@media (max-width: 460px) {
-  .single-product-titles {
-    padding: 2rem;
-  }
-}
